src/test/ui/issues/issue-5100.stderr
error[E0308]: mismatched types
  --> $DIR/issue-5100.rs:8:9
   |
LL |         A::B => (),
   |         ^^^^ expected tuple, found enum `A`
   |
   = note: expected type `(bool, bool)`
              found type `A`

error[E0308]: mismatched types
  --> $DIR/issue-5100.rs:17:9
   |
LL |         (true, false, false) => ()
   |         ^^^^^^^^^^^^^^^^^^^^ expected a tuple with 2 elements, found one with 3 elements
   |
   = note: expected type `(bool, bool)`
              found type `(_, _, _)`

error[E0308]: mismatched types
  --> $DIR/issue-5100.rs:25:9
   |
LL |         (true, false, false) => ()
   |         ^^^^^^^^^^^^^^^^^^^^ expected a tuple with 2 elements, found one with 3 elements
   |
   = note: expected type `(bool, bool)`
              found type `(_, _, _)`

error[E0308]: mismatched types
  --> $DIR/issue-5100.rs:33:9
   |
LL |     match (true, false) {
   |           ------------- this match expression has type `(bool, bool)`
LL |         box (true, false) => ()
   |         ^^^^^^^^^^^^^^^^^ expected tuple, found struct `std::boxed::Box`
   |
   = note: expected type `(bool, bool)`
              found type `std::boxed::Box<_>`

error[E0308]: mismatched types
  --> $DIR/issue-5100.rs:40:9
   |
LL |         &(true, false) => ()
   |         ^^^^^^^^^^^^^^ expected tuple, found reference
   |
   = note: expected type `(bool, bool)`
              found type `&_`

error[E0618]: expected function, found `(char, char)`
  --> $DIR/issue-5100.rs:48:14
   |
LL |       let v = [('a', 'b')
   |  ______________-^^^^^^^^^
LL | |              ('c', 'd'),
   | |_______________________- call expression requires function

error[E0308]: mismatched types
  --> $DIR/issue-5100.rs:55:19
   |
LL |     let x: char = true;
   |                   ^^^^ expected char, found bool

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0308, E0618.
For more information about an error, try `rustc --explain E0308`.
